<resources>
    <string name="app_name">RfidReaderApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bluetooth_option">Bluetooth option</string>
    <string name="serial_option">Serialport option</string>
    <string name="tag_count">標籤個數：</string>
    <string name="clear_data">清空數據</string>
    <string name="rbInventorySingle">單一標籤</string>
    <string name="rbInventoryLoop">連續讀取標籤</string>
    <string name="inventory">讀標籤</string>
    <string name="stop_read">停止讀取標籤</string>
    <string name="epc">EPC</string>
    <string name="len">長度</string>
    <string name="count">次數</string>
    <string name="inventory_tag">識別標籤</string>
    <string name="select_tag">指定標籤</string>
    <string name="tag">標籤號</string>
    <string name="menbank">儲存區</string>
    <string name="access_password">訪問密碼：</string>
    <string name="addr">地址</string>
    <string name="read_data">讀取資料</string>
    <string name="send_data">傳送</string>
    <string name="readData">讀取資料</string>
    <string name="write_data">寫入資料</string>
    <string name="serialport_setting">端口設置</string>
    <string name="com_id">COM口：</string>
    <string name="baudrate">波特率：</string>
    <string name="connected_flag">通訊狀態：</string>
    <string name="output_power">輸出功率：</string>
    <string name="work_freq">工作頻率：</string>
    <string name="connect_device">連接設備</string>
    <string name="disconnect">未連接</string>
    <string name="connected">已連接</string>
    <string name="into_reader">進入讀寫器操作</string>
    <string name="work_area">工作區域</string>
    <string name="exit">退出</string>
    <string name="lock_membank">鎖定區域：</string>
    <string name="lock_type">鎖定類型：</string>
    <string name="kill_password">銷毀密碼：</string>
    <string name="kill">銷毀</string>
    <string name="lock">鎖定</string>
    <string name="lock_kill">鎖定/銷毀</string>
    <string name="para_setting">參數設置</string>
    <string name="read_write">讀/寫操作</string>
    <string name="data_bit">數據位元</string>
    <string name="stop_bit">停止位元:</string>
    <string name="parity">奇偶較驗 :</string>
    <string name="setting">設置</string>
    <string name="to_uhf">進入UHF操作</string>
    <string name="help">幫助</string>
    <string name="connect_info">公司聯絡方式</string>
    <string name="help_info">奇渥科技</string>
    <string name="title_activity_query">QueryActivity</string>

</resources>
